--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var governorTotal = 36
 
 document.getElementById("results-count").innerHTML = ("Senate: " + senate.length + " of " + senateTotal + " races decided. Dems now have " + (senateDems+23) + " seats, and need " +  (50-(senateDems+23)) + " more for a majority." + "</br>" +
                                                     "Governors: " + governor.length + " of " + governorTotal + " races decided. Dems now have " + (governorDems+7) + " state houses." + "</br>" +
-                                                  "House Races: " + house.length +  " of " + houseTotal + " races decided. Dems now have " + houseDem.length + " house seats, and need " +  (218-houseDems.length) + " more for a majority." + "</br>" )
+                                                  "House Races: " + house.length +  " of " + houseTotal + " races decided. Dems now have " + houseDems.length + " house seats, and need " +  (218-houseDems.length) + " more for a majority." + "</br>" )
 
 var senatetable = d3.select("#senate-location")
                     .selectAll("div")
