--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ var senateTotal = 35
 var houseTotal = 435
 var governorTotal = 36
 
-document.getElementById("results-count").innerHTML = ("Senate: " + senate.length + " of " + senateTotal + " races decided. Dems now have " + (senateDems.length+23) + " seats, and need " +  (50-(senateDems+23)) + " more for a majority." + "</br>" +
-                                                    "Governors: " + governor.length + " of " + governorTotal + " races decided. Dems now have " + (governorDems+7) + " state houses." + "</br>" +
+document.getElementById("results-count").innerHTML = ("Senate: " + senate.length + " of " + senateTotal + " races decided. Dems now have " + (senateDems.length+23) + " seats, and need " +  (50-(senateDem.lengths+23)) + " more for a majority." + "</br>" +
+                                                    "Governors: " + governor.length + " of " + governorTotal + " races decided. Dems now have " + (governorDems.length+7) + " state houses." + "</br>" +
                                                   "House Races: " + house.length +  " of " + houseTotal + " races decided. Dems now have " + houseDems.length + " house seats, and need " +  (218-houseDems.length) + " more for a majority." + "</br>" )
 
 var senatetable = d3.select("#senate-location")
