Removed Automatic Refresh
Removed automatic refresh after election night ended.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="refresh" content="60"/>
+<!--   <meta http-equiv="refresh" content="60"/> -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uswds/1.6.8/css/uswds.min.css">
 	<style>
 		.containerwgt {
@@ -25,7 +25,7 @@
 
 <div id="lastupdate"></div>
 </br>
-<div> The following page will automatically update every minute (or on manual reload) and show you each Senate, House and Gubernatorial race that has been decided so far. I'm hoping this might make watching the returns just a little less stressful! </br> </br> This page will automatically refresh every minute. </div>
+<div> The following page will automatically update every minute (or on manual reload) and show you each Senate, House and Gubernatorial race that has been decided so far. I'm hoping this might make watching the returns just a little less stressful! </br> </br> <strike> This page will automatically refresh every minute.</strike> After Election Night, will update only on manual refresh. </div>
 
 <h2> Current Disposition </h2>
 <div id = "results-count"></div>
