--- a/map.html
+++ b/map.html
@@ -16,8 +16,8 @@
    <style>
    
    #resultsMap {
-    height: 100%;
-    width: 100%;
+    height: 1em;
+    width: 1em;
    } 
    
    </style>
