--- a/map.html
+++ b/map.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
 <html>
-	
-	<meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -13,23 +13,23 @@
    crossorigin=""></script>
    <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js"></script>
    
-   <style>
+<style>
    
    #resultsMap {
     height: 100%;
     width: 100%;
    } 
+</style>
    
-   </style>
-   
-   <head> 
+<head> 	
    <title> 2018 Election Results, By Congressional District </title>
-   
-   <body>
+	</head>   
+  
+<body>
    
    <div id="resultsMap"></div>
    
-   <script>
+<script>
    
    var layer = new L.StamenTileLayer("terrain");
    var map = new L.Map("resultsMap", {
@@ -39,9 +39,7 @@
 
 map.addLayer(layer);
    
-   
-   
-   </script>
+</script>
    
    </body>
    </html>
