--- a/map.html
+++ b/map.html
@@ -1,51 +1,123 @@
-
 <!DOCTYPE html>
 <html>
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
-   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-   crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-   integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-   crossorigin=""></script>
-   <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js"></script>
-   
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+ integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+ crossorigin=""/>
+ <link rel="stylesheet" href="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.control.min.css" />
+<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+ integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+ crossorigin=""></script>
+ <script type="text/javascript" src="https://cdn.rawgit.com/nezasa/iso8601-js-period/master/iso8601.min.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js"></script>
+<script src="https://d3js.org/d3.v4.js"></script>
+<script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js"></script>
+
 <style>
-   
+
    #resultsMap {
     height: 100vh;
     width: 100vw;
-   } 
+   }
 </style>
-   
-<head> 	
+
+<head>
    <title> 2018 Election Results, By Congressional District </title>
-	</head>   
-  
+	</head>
+
 <body>
-   
+
    <div id="resultsMap"></div>
-   
+
 <script>
-   
-   var layer = new L.StamenTileLayer("terrain");
-   var map = new L.Map("resultsMap", {
-    center: new L.LatLng(37.8, -96),
-    zoom: 4
+var indexCount = 22
+//create map and add statment tiles
+var layer = new L.StamenTileLayer("toner-lite");
+var map = new L.Map("resultsMap", {
+ center: new L.LatLng(37.8, -96),
+ zoom: 4,
 });
 
 map.addLayer(layer);
-   
+
+//load and process the data
+d3.queue()
+  // .defer(d3.json, "demresults.geojson")
+  .defer(d3.json, "demtime.geojson")
+  .defer(d3.json, "cd116.geojson")
+  .await(analyze);
+
+function analyze(error, results, mapData) {
+  if(error) { console.log(error); }
+
+// this took you so long to figure out! Way to join the election data to the geoJson! Hurray!
+mapData.features.forEach(function(feat) {
+    var result = results.filter(function(result) {
+        return result.district === feat.properties.district;
+    });
+    feat.properties.vote = result.map(x => x.votepct)
+    // feat.properties.coordTimes = result.map(x => x.system)
+});
+
+    //define styles
+    function style(feature) {
+        return {
+            fillColor: getColor(feature.properties.vote[indexCount]),
+            weight: 0,
+            opacity: 0,
+            stroke: false,
+            fillOpacity: 0.8
+        }
+    };
+
+getColor()
+    //define colors. Could only get it to work right in descending order
+    function getColor(d) {
+        return d > 0.9  ? 'rgba(0,0,255,0.8)' :
+               d > 0.8  ? 'rgba(26,0,229,0.8)' :
+               d > 0.7  ? 'rgba(51,0,204,0.8)' :
+               d > 0.6  ? 'rgba(77,0,153,0.8)' :
+               d > 0.5  ? 'rgba(102,0,153,0.8)' :
+               d > 0.4  ? 'rgba(128,1,128,0.8)' :
+               d > 0.3  ? 'rgba(153,1,102,0.8)' :
+               d > 0.2  ? 'rgba(178,1,77,0.8)':
+               d > 0.1  ? 'rgba(204,1,51,0.8)':
+              //  Number(d.toString()) >   ? 'rgba(229,1,26,0.8)' :
+               d > 0.0 ? 'rgba(255,1,0,0.8)':
+                      'rgba(0,0,0,0.0)';
+    }
+
+//KEY POINT - to actually be able to remove layers in animation, put in groups, then clear from group later!
+var layerGroup = new L.LayerGroup();
+layerGroup.addTo(map);
+var geoLayer = new L.geoJson().addTo(map)
+
+updateColors()
+
+function updateColors(){
+  if (indexCount != 133){
+    layerGroup.clearLayers();
+    // Create geoLayer, and then add it to time layer.
+    var geoLayer = new L.geoJson(mapData, {style: style, smoothFactor: 0.25})
+    layerGroup.addLayer(geoLayer)
+    indexCount = indexCount+1
+  } else { if (indexCount == 133){
+    layerGroup.clearLayers();
+    // Create geoLayer, and then add it to time layer.
+    var geoLayer = new L.geoJson(mapData, {style: style, smoothFactor: 0.25}).addTo(map)
+    layerGroup.addLayer(geoLayer)
+      indexCount = 0
+      console.log("133 count is " + indexCount)
+  };
+};
+setTimeout(updateColors, 500);
+ };
+
+}
 </script>
-   
-   </body>
-   </html>
- 
-   
 
-
-
+</body>
 </html>
