--- a/map.html
+++ b/map.html
@@ -104,7 +104,7 @@ function updateColors(){
     var geoLayer = new L.geoJson(mapData, {style: style, smoothFactor: 0.25})
     layerGroup.addLayer(geoLayer)
     indexCount = indexCount+1
-setTimeout(updateColors, 500);  
+// setTimeout(updateColors, 500);  
   } else { if (indexCount == 133){
     layerGroup.clearLayers();
     // Create geoLayer, and then add it to time layer.
@@ -114,7 +114,7 @@ setTimeout(updateColors, 500);
       console.log("133 count is " + indexCount)
   };
 };
-setTimeout(updateColors, 500);
+setTimeout(updateColors, 1500);
  };
 
 }
