--- a/map.html
+++ b/map.html
@@ -74,7 +74,7 @@ mapData.features.forEach(function(feat) {
     });
     feat.properties.vote = result.map(x => x.votepct)
     feat.properties.times = result.map(x => x.system)
-    feat.votewatch = result.map(x => (x.votepct)
+    feat.votewatch = result.map(x => (x.votepct))
 });
 
     //define styles
